finalize backend update for scvi-hub
